--- a/iTunePlayer_v5/app/src/main/res/layout/activity_preview.xml
+++ b/iTunePlayer_v5/app/src/main/res/layout/activity_preview.xml
@@ -38,6 +38,12 @@
 
     </androidx.cardview.widget.CardView>
 
+    <View
+        android:id="@+id/anchorView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
+
     <Button
         android:layout_marginTop="16dp"
         android:text="Preview"
