--- a/hw3/app/src/main/res/layout/activity_preview.xml
+++ b/hw3/app/src/main/res/layout/activity_preview.xml
@@ -56,5 +56,13 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="32dp" />
     </LinearLayout>
 </layout>
