--- a/hw3/app/src/main/res/layout/activity_preview.xml
+++ b/hw3/app/src/main/res/layout/activity_preview.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".PreviewActivity">
 
+    <data>
+        <variable
+            name="video"
+            type="com.hellhbbd.hw3.Video" />
+    </data>
+
     <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
@@ -41,6 +47,7 @@
                     android:layout_marginTop="16dp"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
+                    android:text="@{video.title}"
                     android:textSize="26sp"
                     android:textStyle="bold" />
 
@@ -52,6 +59,7 @@
                     android:gravity="center_horizontal"
                     android:paddingStart="24dp"
                     android:paddingEnd="24dp"
+                    android:text="@{video.description}"
                     android:textColor="#777777"
                     android:textSize="14sp" />
             </LinearLayout>
